# vs-server-manager

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  config.json  debug.txt  pyproject.toml
examples/: list-clients-example.txt  status-example-offline.txt  status-example-online.txt
vsm/: __init__.py  background.py  backup.py  cli.py  config.py  daemon.py  downtime.py  logs.py  rpc.py  scheduler.py  server.py
vsm/tui/: __init__.py  app.py  app.tcss  workers.py
vsm/tui/screens/: __init__.py  backup_settings_screen.py  config_screen.py  confirm_screen.py  edit_value_screen.py  log_view_screen.py  server_config_screen.py
vsm/tui/tabs/: __init__.py  backups_tab.py  console_tab.py  logs_tab.py  scheduler_tab.py  status_tab.py
