[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vs-server-manager"
version = "0.1.0"
description = "CLI tool for managing a Vintage Story dedicated server"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["vintage-story", "server", "backup", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: System :: Archiving :: Backup",
]
dependencies = [
    "click>=8.0",
    "apscheduler>=3.10",
    "rich>=13.0",
]

[project.scripts]
vsm = "vsm.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "ruff",
]

[tool.setuptools.packages.find]
include = ["vsm*"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
